Samples/Vin.Sample.Web/Views/Error/Maintenance.cshtml

@{
    ViewBag.Title = "Maintenance";
    Layout = "";
}

<div class="row">
    <div class="twelve columns">
        <h1>Down for Maintenance</h1>
    </div>
</div>
<div class="row">
    <div class="twelve columns">
        The site you are looking for is down for maintenance. Please come back soon.
    </div>
</div>